--- a/index.html
+++ b/index.html
@@ -6,168 +6,30 @@
         <title>Ejercicios diarios</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- Place favicon.ico in the root directory -->
+		<!-- Styles-->
+		<link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
-		<style>
-			select {
-			  width: 20%;
-			  min-width: 15ch;
-			  max-width: 30ch;
-			  border: 1px solid var(--select-border);
-			  border-radius: 0.25em;
-			  padding: 0.25em 0.5em;
-			  font-size: 1.25rem;
-			  cursor: pointer;
-			  line-height: 1.1;
-			  background-color: #77C66E;
-			  margin: 0.5rem
-			}
-			button {
-			  width: 20%;
-			  min-width: 15ch;
-			  max-width: 30ch;
-			  border: 1px solid var(--select-border);
-			  border-radius: 0.25em;
-			  padding: 0.25em 0.5em;
-			  font-size: 1.25rem;
-			  cursor: pointer;
-			  line-height: 1.1;
-			  background-color: #77C66E;
-			  margin: 0.5rem
-			}
-			input {
-			  width: 20%;
-			  min-width: 15ch;
-			  max-width: 30ch;
-			  border: 1px solid var(--select-border);
-			  border-radius: 0.25em;
-			  padding: 0.25em 0.5em;
-			  font-size: 1.25rem;
-			  cursor: pointer;
-			  line-height: 1.1;
-			  background-color: #77C66E;
-			  margin: 0.5rem
-			}
-			.container {
-				width:100%
-				display: flex
-			}
-		</style>
+		
 		<h1>Calentamiento y Ejercicios</h1>
 		<div class="continer">
 			<select id="selector" onchange="cambioDia()"><option id="calentamiento">Calentamiento</option><option id="ejercicios">Ejercicios</option></select>
 			<button onClick="insertarContenido()" id="botonInicio">Iniciar</button>
 			<button onClick="cerrarContenido()" id="botonCerrar">Cerrar Contenido - Reiniciar</button>
 		</div>
-		<div id="contenido"></div>
+		<div style="display: flex; flex-direction: row; height: 400px;">
+			<div id="contenido"></div>
+			<div id="timerText"></div>
+		</div>
 		<br/>
 		<br/>
-		<input type="number" id="tempoId"/><button onclick="apagar()">Iniciar Tempo</button> <button onclick="cancelar()">Cancelar</button> <div id="testdiv"></div>
-		<script>
-		var timout; 
-		var interval;
-		function apagar(){ 
-			document.getElementById("testdiv").innerHTML="Timer Iniciado"; 
-			let tiempo = (document.getElementById("tempoId").value ?? 1) * 60000
-			timout=setTimeout(
-				function(){ 
-					document.getElementById("testdiv").innerHTML="Timer Finalizado"; 
-					//alert("Tiempo!")
-					cancelar()
-					},tiempo,"JavaScript"); 
-			let tiempoInterval=tiempo/1000;
-			interval =setInterval(function() {document.getElementById("testdiv").innerHTML=tiempoInterval-1; tiempoInterval--}, 1000);
-		} 
-		function cancelar(){ 
-			clearTimeout(timout); 
-			clearInterval(interval);
-			document.getElementById("testdiv").innerHTML="Timer Finalizado"; 
-		}
-		let iniciar = false
-		let indexCal = 0
-		let indexEj = 0
-		function insertarContenido (){
-			if(!iniciar){
-			document.querySelector('#botonInicio').innerHTML="Siguiente";
-			iniciar=true
-			}
-			if(document.querySelector('#selector option:checked').id==="calentamiento"){
-				const contenidoCal=[
-				'<h2>1. Activación de cadera</h2><video autoplay="" loop="" muted="" playsinline="" width="600" height="400" src="https://hmg-h-cdn.hearstapps.com/videos/calentamiento-activacion-cadera-1575301068.mp4"></video>',
-				'<h2>2. Rotaciones de cadera</h2><video autoplay="" loop="" muted="" playsinline="" width="600" height="400" src="https://hmg-h-cdn.hearstapps.com/videos/calentamiento-rotacion-cadera-1575301190.mp4"></video>',
-				'<h2>3. Enhebrar la aguja</h2><video autoplay="" loop="" muted="" playsinline="" width="600" height="400" src="https://hmg-h-cdn.hearstapps.com/videos/calentamiento-enhebrar-aguja-1575301208.mp4"></video>',
-				'<h2>4. Tijeras abdominales</h2><img src="https://media.giphy.com/media/jUdlZc9Kw88mGqGPoD/giphy.gif" alt="Exercice 4" />',
-				'<h2>5. Estocada lateral con elevación de rodilla</h2><video autoplay="" loop="" muted="" playsinline="" width="600" height="400" src="https://hmg-h-cdn.hearstapps.com/videos/calentamiento-estocada-lateral-1575301237.mp4"></video>'
-				]
-				document.querySelector('#contenido').innerHTML=contenidoCal[indexCal];
-				indexCal=indexCal==contenidoCal.length-1 ? 0 : indexCal+1
-			}else if(document.querySelector('#selector option:checked').id==="ejercicios"){
-				let contenidoEj=[
-					'<h2>1. Activación de cadera</h2><video autoplay="" loop="" muted="" playsinline="" width="600" height="400" src="https://hmg-h-cdn.hearstapps.com/videos/calentamiento-activacion-cadera-1575301068.mp4"></video>',
-					'<h2>2. Rotaciones de cadera</h2><video autoplay="" loop="" muted="" playsinline="" width="600" height="400" src="https://hmg-h-cdn.hearstapps.com/videos/calentamiento-rotacion-cadera-1575301190.mp4"></video>',
-					'<h2>3. Enhebrar la aguja</h2><video autoplay="" loop="" muted="" playsinline="" width="600" height="400" src="https://hmg-h-cdn.hearstapps.com/videos/calentamiento-enhebrar-aguja-1575301208.mp4"></video>',
-					'<h2>4. Plancha con estocada y rotación</h2><video autoplay="" loop="" muted="" playsinline="" width="600" height="400" src="https://hmg-h-cdn.hearstapps.com/videos/calentamiento-plancha-1575301225.mp4"></video>',
-					'<h2>5. Estocada lateral con elevación de rodilla</h2><video autoplay="" loop="" muted="" playsinline="" width="600" height="400" src="https://hmg-h-cdn.hearstapps.com/videos/calentamiento-estocada-lateral-1575301237.mp4"></video>'
-					]
-				if(document.querySelector('#selectorDia option:checked').id==="Martes"){
-					contenidoEj=[
-						'<h2>1. Sentadilla con balanceo</h2><video autoplay="" loop="" muted="" playsinline="" width="600" height="400" src="https://hmg-h-cdn.hearstapps.com/videos/squat-thrusts-1591196463.mp4"></video>',
-						'<h2>2. Sentadillas sin peso</h2><img src="https://media.giphy.com/media/ed6cvbto3N5XbIgp67/giphy.gif" alt="Exercice 4" />',
-						'<h2>3. Abdominales en bicicleta</h2><img src="https://media.giphy.com/media/dELBjGcheIAxp0iFmq/giphy.gif" alt="Exercice 4" />',
-						'<h2>4. Toques de pies laterales</h2><video autoplay="" loop="" muted="" playsinline="" width="600" height="400" src="https://hmg-h-cdn.hearstapps.com/videos/lateral-toe-taps-1591198266.mp4"></video>',
-						'<h2>5. Muñeca a tobillos</h2><video autoplay="" loop="" muted="" playsinline="" width="600" height="400" src="https://hmg-h-cdn.hearstapps.com/videos/wrist-to-ankles-1591198616.mp4"></video>'
-					]
-				}else if(document.querySelector('#selectorDia option:checked').id==="Jueves"){
-					contenidoEj=[
-						'<h2>6.Pasitos rápidos con flexión</h2><video autoplay="" loop="" muted="" playsinline="" width="600" height="400" src="https://hmg-h-cdn.hearstapps.com/videos/fast-feet-drop-1591199264.mp4"></video>',
-						'<h2>7. Zancada lateral con rodillas arriba</h2><video autoplay="" loop="" muted="" playsinline="" width="600" height="400" src="https://hmg-h-cdn.hearstapps.com/videos/2020-womenshealth-fitnessloops-ep24-tatiana-ms-kw-v1-gradedselects-lateralhighknees-02-1583933672.mp4"></video>',
-						'<h2>8. Esquiadores</h2><video autoplay="" loop="" muted="" playsinline="" width="600" height="400" src="https://hmg-h-cdn.hearstapps.com/videos/2020-womenshealth-fitnessloops-ep24-tatiana-ms-kw-v1-gradedselects-skaters-02-1583933791.mp4"></video>',
-						'<h2>9. Pasos rápidos con puños</h2><video autoplay="" loop="" muted="" playsinline="" width="600" height="400" src="https://hmg-h-cdn.hearstapps.com/videos/2020-womenshealth-fitnessloops-ep24-tatiana-ms-kw-v1-gradedselects-fastfeetwithpunches-02-1583933830.mp4"></video>',
-						'<h2>10. Abdominales de crossfit</h2><img src="https://media.giphy.com/media/ivpiAtbDZEQQVYYsIz/giphy.gif" alt="Exercice 4" />',
-						]
-				}
-				else if(document.querySelector('#selectorDia option:checked').id==="Sabado"){
-					contenidoEj=[
-						'<h2>11. Sentadilla con salto de 180º</h2><video autoplay="" loop="" muted="" playsinline="" width="600" height="400" src="https://hmg-h-cdn.hearstapps.com/videos/2020-womenshealth-fitnessloops-ep24-tatiana-ms-kw-v1-gradedselects-180squatjump-01-1583933857.mp4"></video>',
-						'<h2>12. Lunge con elevación de rodilla</h2><video autoplay="" loop="" muted="" playsinline="" width="600" height="400" src="https://hmg-h-cdn.hearstapps.com/videos/2020-womenshealth-fitnessloops-ep24-tatiana-ms-kw-v1-gradedselects-reverselungewithkneedrive-01-1583933889.mp4"></video>',
-						'<h2>13. Plancha con rodilla al pecho</h2><video autoplay="" loop="" muted="" playsinline="" width="600" height="400" src="https://hmg-h-cdn.hearstapps.com/videos/2020-womenshealth-fitnessloops-ep24-tatiana-ms-kw-v1-gradedselects-plankkneetucks-02-1583933914.mp4"></video>',
-						'<h2>14. Escaladores cruzados</h2><video autoplay="" loop="" muted="" playsinline="" width="600" height="400" src="https://hmg-h-cdn.hearstapps.com/videos/2020-womenshealth-fitnessloops-ep24-tatiana-ms-kw-v1-gradedselects-crossmountainclimbers-01-1583933935.mp4"></video>',
-						'<h2>15. Crunch oblicuo tumbado</h2><img src="https://media.giphy.com/media/wCo4WYE1uzbuiSE5wP/giphy.gif" alt="Exercice 4" />',
-						]
-				}
-				document.querySelector('#contenido').innerHTML=contenidoEj[indexEj];
-				indexEj=indexEj==contenidoEj.length-1 ? 0 : indexEj+1
-			}
-			
-		}
-		function cerrarContenido(){
-			document.querySelector('#contenido').innerHTML="";
-			document.querySelector('#botonInicio').innerHTML="Iniciar";
-			if(document.querySelector('#selector option:checked').id==="calentamiento" && document.getElementById("selectorDia")) document.getElementById("selectorDia").remove();
-			iniciar = false
-			indexCal = 0
-			indexEj = 0
-		}
-		function cambioDia(){
-			if(document.querySelector('#selector option:checked').id==="ejercicios"){
-				let select=document.createElement("select")
-				select.id="selectorDia"
-				let dias = ["Martes","Jueves", "Sabado", ]
-				for(let i=0; i<dias.length; i++){
-					var opt = document.createElement('option');
-					opt.innerHTML = dias[i];
-					opt.id=dias[i]
-					select.appendChild(opt);
-				}
-				insertAfter(document.querySelector('#selector'), select)
-			}
-			cerrarContenido()
-			
-		}
-		function insertAfter(referenceNode, newNode) {
-			referenceNode.parentNode.insertBefore(newNode, referenceNode.nextSibling);
-		}
-		</script>
+		<div style="display: flex;">
+			<input type="number" id="tempoId"/><button onclick="iniciarTimer()">Iniciar Tempo</button> <button onclick="cancelar()">Cancelar</button>
+		</div>
+		<audio style="display: none;" controls id="audioFinal">
+			<source src="audio/mixkit-facility-alarm-908.wav" type="audio/wav">
+		  Your browser does not support the audio element.
+		  </audio>
+		<script type="text/javascript" src="scripts.js"></script>
     </body>
 </html>
