Nuevo selector, y nuevos ejercicios para jueves

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		
 		<h1>Calentamiento y Ejercicios</h1>
 		<div class="continer">
-			<select id="selector" onchange="cambioDia()"><option id="calentamiento">Calentamiento</option><option id="ejercicios">Ejercicios</option></select>
+			<select id="selector" onchange="cambioDia()"><option id="calentamiento">Calentamiento</option><option id="ejercicios">Ejercicios</option><option id="tunelCarpio">Estiramientos Carpianos</option></select>
 			<button onClick="insertarContenido()" id="botonInicio">Iniciar</button>
 			<button onClick="cerrarContenido()" id="botonCerrar">Cerrar Contenido - Reiniciar</button>
 		</div>
